--- a/views/groups.pug
+++ b/views/groups.pug
@@ -1,4 +1,4 @@
-extends layout
+extends _bootstrap
 
 block content
   h1= title
@@ -19,5 +19,3 @@ block content
             td
               p #{group.path}
 
-  br
-  a(href='/') Home
