--- a/views/index.pug
+++ b/views/index.pug
@@ -1,9 +1,8 @@
-extends layout
+extends _bootstrap
 
 block content
-  h1= title
-  img.className#IdName(src="http://2.bp.blogspot.com/-DdHoZ8fnppk/VtmFgjhIOyI/AAAAAAAATsQ/Yw-hPrM8OwI/s1600-r/keycloak_logo_600px.png" height="100" width="350")
-  img.className#IdName(src="https://i.cloudup.com/zfY6lL7eFa-3000x3000.png" height="100" width="350")
+  img.className#IdName(src="http://2.bp.blogspot.com/-DdHoZ8fnppk/VtmFgjhIOyI/AAAAAAAATsQ/Yw-hPrM8OwI/s1600-r/keycloak_logo_600px.png" height="70" width="200")
+  img.className#IdName(src="https://i.cloudup.com/zfY6lL7eFa-3000x3000.png" height="70" width="200")
 
   p Welcome to Keypress - Keycloak with Express.
 
