--- a/views/_bootstrap.pug
+++ b/views/_bootstrap.pug
@@ -66,6 +66,7 @@ html(lang="en")
 			+nav_item("/users") Users
 			+nav_item("/roles") Roles
 			+nav_item("/groups") Groups
+			+nav_item("/logout") Logout
 		block content
 
 
